Alle basispagina's klaar

--- a/app/Resources/views/HealthOne/show.html.contact.twig
+++ b/app/Resources/views/HealthOne/show.html.contact.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{%  block title %}Contact - HealthOne{%  endblock %}
+{%  block title %}{{ name }}{%  endblock %}
     {%  block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css')}}">
         <script src="{{ asset('js/jquery.js')}}"></script>
