--- a/app/Resources/views/HealthOne/show.html.patientenlijst.twig
+++ b/app/Resources/views/HealthOne/show.html.patientenlijst.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.inside.twig' %}
-{%  block title %}Patiëntenlijst - HealthOne{%  endblock %}
+{%  block title %}{{ name }}{%  endblock %}
     {%  block stylesheets %}
         <link rel="stylesheet" href="{{ asset('css/3.2.1/bootstrap.min.css')}}">
         <script src="{{ asset('js/jquery.js')}}"></script>
