--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,6 +6,7 @@
         <title>{% block title %}Homepagina - HealthOne{% endblock %}</title>
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css')}}">
+            <link rel="stylesheet" href="{{ asset('css/all.min.css')}}"/>
             <script src="{{ asset('js/jquery.js')}}"></script>
             <script src="{{ asset('js/popper.min.js') }}"></script>
             <script src="{{ asset('css/style.css') }}"></script>
