--- a/app/Resources/views/HealthOne/show.html.patientenlijst.twig
+++ b/app/Resources/views/HealthOne/show.html.patientenlijst.twig
@@ -40,6 +40,15 @@
             <th>Achternaam<i class="fas fa-sort"></th>
             <th>Pasnummer<i class="fas fa-sort"></th>
             <th>Edit</th>
+            {% for patient in patienten %}
+        <tr>
+            <td>{{ patient.voornaam }}</td>
+            <td>{{ patient.tussenvoegsel }}</td>
+            <td>{{ patient.achternaam }}</td>
+            <td>{{ patient.pasnummer }}</td>
+            <td><a href=Patientdetails.php?ID={{ patient.id }} style='color: blue'><i class="fas fa-info"></i></a><a href=Patientbewerk.php?ID={{ patient.id }} style='color: green; margin-left: 3px'><i class="fas fa-edit"></i></a><a href='Patientenlijst.php?ID={{ patient.id }}' style='color: red; margin-left: 4px'><i class="fas fa-ban"></i></a></td>
+        </tr>
+            {% endfor %}
         </tr>
         </thead>
         <tbody>
