--- a/app/Resources/views/HealthOne/show.html.patientenlijst.twig
+++ b/app/Resources/views/HealthOne/show.html.patientenlijst.twig
@@ -1,15 +1,5 @@
 {% extends 'base.html.inside.twig' %}
 {%  block title %}{{ name }}{%  endblock %}
-    {%  block stylesheets %}
-        <link rel="stylesheet" href="{{ asset('css/3.2.1/bootstrap.min.css')}}">
-        <script src="{{ asset('js/jquery.js')}}"></script>
-        <script src="{{ asset('js/popper.min.js') }}"></script>
-        <script src="{{ asset('css/style.css') }}"></script>
-        <link rel="stylesheet" href="css/all.min.css"/>
-        <link href="css/style.css" rel="stylesheet" type="text/css" />
-        <link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css"/>
-        <script type="text/javascript" src="DataTables/datatables.min.js"></script>
-    {%  endblock %}
     {% block active1 %}active
     {%  endblock %}
 {% block dataTableScript %}
@@ -40,6 +30,8 @@
             <th>Achternaam<i class="fas fa-sort"></th>
             <th>Pasnummer<i class="fas fa-sort"></th>
             <th>Edit</th>
+        </tr>
+        </thead>
             {% for patient in patienten %}
         <tr>
             <td>{{ patient.voornaam }}</td>
@@ -49,9 +41,6 @@
             <td><a href=Patientdetails.php?ID={{ patient.id }} style='color: blue'><i class="fas fa-info"></i></a><a href=Patientbewerk.php?ID={{ patient.id }} style='color: green; margin-left: 3px'><i class="fas fa-edit"></i></a><a href='Patientenlijst.php?ID={{ patient.id }}' style='color: red; margin-left: 4px'><i class="fas fa-ban"></i></a></td>
         </tr>
             {% endfor %}
-        </tr>
-        </thead>
-        <tbody>
-        </tbody>
     </table>
+    </div>
 {% endblock %}
