--- a/app/Resources/views/HealthOne/show.html.medicijnenlijst.twig
+++ b/app/Resources/views/HealthOne/show.html.medicijnenlijst.twig
@@ -40,6 +40,6 @@
                 </tr>
             {% endfor %}
         </table>
-        <a href="Medicijnnieuw.php"><button class="btn-success" style="margin-top: 4px"><i class="fas fa-plus"></i> Nieuw medicijn</button></a>
+        <a href="Medicijnform"><button class="btn-success" style="margin-top: 4px"><i class="fas fa-plus"></i> Nieuw medicijn</button></a>
     </div>
 {% endblock %}
