--- a/app/Resources/views/base.html.inside.twig
+++ b/app/Resources/views/base.html.inside.twig
@@ -3,15 +3,15 @@
     <link rel="stylesheet" href="{{ asset('css/3.2.1/bootstrap.min.css')}}">
     <script src="{{ asset('js/jquery.min.js')}}"></script>
     <script src="{{ asset('js/popper.min.js') }}"></script>
-    <link rel="stylesheet" href="css/all.min.css"/>
-    <link rel="stylesheet" type="text/css" href="DataTables/datatables.min.css"/>
-    <script type="text/javascript" src="DataTables/datatables.min.js"></script>
+    <link rel="stylesheet" href="{{ asset('css/all.min.css') }}"/>
+    <link rel="stylesheet" type="text/css" href="{{ asset('DataTables/datatables.min.css') }}"/>
+    <script type="text/javascript" src="{{ asset('DataTables/datatables.min.js') }}"></script>
     <link rel="stylesheet" href="{{ asset('css/style.css')}}">
 {%  endblock %}
 {% block body %}
 {% block menu %}
     <div class="list-group">
-        <span><img width="300px" src="Images/Logo.png" class="mx-auto d-block"></span>
+        <span><img width="300px" src="{{ asset('Images/Logo.png') }}" class="mx-auto d-block"></span>
         <a href="{{ path('patientenlijst') }}" class="list-group-item {% block active1 %}{% endblock %}"><i class="far fa-address-card"></i><span> Patiënteninformatie</span></a>
         <a href="{{ path('artsenlijst') }}" class="list-group-item {% block active2 %}{% endblock %}"><i class="fas fa-user-md"></i><span> Artsenlijst</span></a>
         <a href="{{ path('medicijnenlijst') }}" class="list-group-item {% block active3 %}{% endblock %}"><i class="fas fa-pills "></i><span> Medicijnenlijst</span></a>
