--- a/app/Resources/views/HealthOne/show.html.medicijnenlijst.twig
+++ b/app/Resources/views/HealthOne/show.html.medicijnenlijst.twig
@@ -36,7 +36,7 @@
                     <td>{{ medicijn.medicijnnaam }}</td>
                     <td>{{ medicijn.beschrijving }}</td>
                     <td>{{ medicijn.bijwerkingen }}</td>
-                    <td><a href=Medicijndetails.php?ID={{ medicijn.id }} style='color: blue'><i class="fas fa-info"></i></a><a href=Medicijnbewerk.php?ID={{ medicijn.id }} style='color: green; margin-left: 3px'><i class="fas fa-edit"></i></a><a href='medicijnlijst.php?ID={{ medicijn.id }}' style='color: red; margin-left: 4px'><i class="fas fa-ban"></i></a></td>
+                    <td><a href=Medicijndetails.php?ID={{ medicijn.id }} style='color: blue'><i class="fas fa-info"></i></a><a href=medicijnenedit/{{ medicijn.id }} style='color: green; margin-left: 3px'><i class="fas fa-edit"></i></a><a href='medicijndelete/{{ medicijn.id }}' style='color: red; margin-left: 4px'><i class="fas fa-ban"></i></a></td>
                 </tr>
             {% endfor %}
         </table>
