--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
     <body>
         {% block body %}
             <div class="row">
-            <img src="Images/Logo.png" class="mx-auto d-block">
+            <img src="{{ asset('Images/Logo.jpg') }}" class="mx-auto d-block">
         </div>
             <div class="row mt-5">
                 <div class="col"></div>
