--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
                     <button type="button" class="btn btn-lg btn-secondary btn-block">Apotheker</button>
                 </div>
                 <div class="col-3">
-                    <a href="{{ path('patientenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Medewerker</button></a>
+                    <a href="{{ path('lessenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Medewerker</button></a>
                 </div>
                 <div class="col-3">
                     <button type="button" class="btn btn-lg btn-secondary btn-block">Arts</button>
