--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -1,5 +1,5 @@
-{% extends 'base.html.twig' %}
-{% block body %}
+{% extends 'base.html.navbar.twig' %}
+{% block content %}
 
         {%  if error %}
             <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -7,7 +7,6 @@
 
         <form action="{{ path('login') }}" method="post">
             <table>
-                <caption>Inloggen</caption>
                 <tr>
                     <td> gebruikersnaam</td>
                     <td>
