--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -6,7 +6,7 @@
 </div>
 <div class="row mt-5">
     <div class="col"></div>
-    <div class="col-4"><h2 class="text-center">Inloggen als:</h2></div>
+    <div class="col-4"></div>
     <div class="col"></div>
 
 </div>
@@ -14,20 +14,17 @@
 <div class="row mt-3">
     <div class="col"></div>
     <div class="col-3">
-        <button type="button" class="btn btn-lg btn-secondary btn-block">Apotheker</button>
+        <a href="{{ path('lessenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Inloggen</button></a>
     </div>
     <div class="col-3">
-        <a href="{{ path('lessenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Medewerker</button></a>
-    </div>
-    <div class="col-3">
-        <button type="button" class="btn btn-lg btn-secondary btn-block">Arts</button>
+        <a href="{{ path('contact') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Contact</button></a>
     </div>
     <div class="col"></div>
 </div>
 <div class="row mt-5">
     <div class="col"></div>
     <div class="col-6">
-        <a href="{{ path('contact') }}"><button type="button" class="btn btn-secondary btn-block">Contact</button></a>
+
     </div>
     <div class="col"></div>
 </div>
