--- a/app/Resources/views/base.html.inside.twig
+++ b/app/Resources/views/base.html.inside.twig
@@ -13,12 +13,12 @@
     <div class="list-group">
         <span><img width="300px" src="{{ asset('Images/Logo.jpg') }}" class="mx-auto d-block"></span>
         <a href="{{ path('lessenlijst') }}" class="list-group-item {% block active1 %}{% endblock %}"><i class="far fa-address-card"></i><span> Lessenlijst</span></a>
-        <a  class="list-group-item {% block active2 %}{% endblock %}"><i class="fas fa-user-md"></i><span> Artsenlijst</span></a>
-        <a  class="list-group-item {% block active3 %}{% endblock %}"><i class="fas fa-pills "></i><span> Medicijnenlijst</span></a>
+        <a  class="list-group-item {% block active2 %}{% endblock %}"><i class="fas fa-user-md"></i><span> </span></a>
+        <a  class="list-group-item {% block active3 %}{% endblock %}"><i class="fas fa-pills "></i><span> </span></a>
         <a href="{{ path('logout') }}" class="list-group-item"><i class="fas fa-sign-out-alt"></i><span> Uitloggen</span></a>
         <div class="jumbotron">
             <p class="text-center">Gebruiker:</p>
-            <p class="text-center"> Verzekeringsmedewerker</p>
+            <p class="text-center"> {{ gebruiker.username }}</p>
         </div>
     </div>
 {% endblock %}
