--- a/app/Resources/views/base.html.navbar.twig
+++ b/app/Resources/views/base.html.navbar.twig
@@ -5,7 +5,6 @@
     <a href="/"><img src="Images/Logo.jpg" class="mx-auto d-block" style="width:200px"></a>
 </div>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-    <a class="navbar-brand" href="javascript:history.back()">Terug</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -16,6 +15,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('contact') }}">Contact</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('login') }}">Log in</a>
             </li>
         </ul>
     </div>
