--- a/app/Resources/views/Admin/base.html.admin.twig
+++ b/app/Resources/views/Admin/base.html.admin.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.inside.twig' %}
 {% block menulinks %}
-    <a href="{{ path('lessenlijst') }}" class="list-group-item {% block active1 %}{% endblock %}"><i class="far fa-address-card"></i><span> Ledenlijst</span></a>
+    <a href="{{ path('ledenlijst') }}" class="list-group-item {% block active1 %}{% endblock %}"><i class="far fa-address-card"></i><span> Ledenlijst</span></a>
     <a href="{{ path('logout') }}" class="list-group-item"><i class="fas fa-sign-out-alt"></i><span> Uitloggen</span></a>
 {% endblock %}
