--- a/app/Resources/views/login.html.twig
+++ b/app/Resources/views/login.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.navbar.twig' %}
+{% block title %}Login - Trainingfactory{% endblock %}
 {% block content %}
 
         {%  if error %}
