--- a/app/Resources/views/base.html.navbar.twig
+++ b/app/Resources/views/base.html.navbar.twig
@@ -14,10 +14,16 @@
                 <a class="nav-link" href="{{ path('index') }}">Home</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{{ path('login') }}">Log in</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ path('contact') }}">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('login') }}">Log in</a>
+                <a class="nav-link" href="{{ path('gedragsregels') }}">Gedragsregels</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('registreer') }}">Registreer</a>
             </li>
         </ul>
     </div>
