--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -4,6 +4,9 @@
 <div class="row">
     <img src="{{ asset('Images/Logo.jpg') }}" class="mx-auto d-block">
 </div>
+    <div class="row">
+        <h1 class="text-center mx-auto">Trainingfactory</h1>
+    </div>
 <div class="row mt-5">
     <div class="col"></div>
     <div class="col-4"></div>
@@ -11,23 +14,26 @@
 
 </div>
 
-<div class="row mt-3    ">
+<div class="row mt-3">
     <div class="col"></div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('lessenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Log in</button></a>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('contact') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Contact</button></a>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('gedragsregels') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Gedragsregels</button></a>
+    </div>
+    <div class="col-2">
+        <a href="{{ path('registreer') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Registreer</button></a>
     </div>
     <div class="col"></div>
 </div>
     <div class="row mt-5">
         <div class="col"></div>
         <div class="col-xl-4"><h1>lorem ipsum</h1></div>
-        <div class="col-xl-4"><img src="{{ asset('Images/kickbox.jpg') }}" class="mx-auto" style="height: 250px;"></div>
+        <div class="col-xl-4"><img src="{{ asset('Images/kickbox.jpg') }}" class="right" style="height: 250px;"></div>
         <div class="col"></div>
     </div>
     <div class="row mt-3">
