Lessenlijst en shit

--- a/app/Resources/views/base.html.navbar.twig
+++ b/app/Resources/views/base.html.navbar.twig
@@ -19,6 +19,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('login') }}">Log in</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('registreer') }}">registreer</a>
+            </li>
         </ul>
     </div>
 </nav>
