--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -13,14 +13,17 @@
 
 <div class="row mt-3">
     <div class="col"></div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('lessenlijst') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Log in</button></a>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('contact') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Contact</button></a>
     </div>
-    <div class="col-3">
+    <div class="col-2">
         <a href="{{ path('gedragsregels') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Gedragsregels</button></a>
+    </div>
+    <div class="col-2">
+        <a href="{{ path('registreer') }}"><button type="button" class="btn btn-lg btn-secondary btn-block">Registreer</button></a>
     </div>
     <div class="col"></div>
 </div>
