--- a/app/Resources/views/Gebruiker/show.html.lessenlijst.twig
+++ b/app/Resources/views/Gebruiker/show.html.lessenlijst.twig
@@ -25,13 +25,24 @@
     <table class="table table-hover" id="myTable">
         <thead>
         <tr>
-            <th>Voornaam<i class="fas fa-sort"></th>
-            <th>T.v.<i class="fas fa-sort"></th>
-            <th>Achternaam<i class="fas fa-sort"></th>
-            <th>Pasnummer<i class="fas fa-sort"></th>
-            <th>Edit</th>
+            <th>Lestype<i class="fas fa-sort"></th>
+            <th>Locatie<i class="fas fa-sort"></th>
+            <th>Trainer<i class="fas fa-sort"></th>
+            <th>Tijd<i class="fas fa-sort"></th>
+            <th>Datum<i class="fas fa-sort"></th>
+            <th>Aanmelden</th>
         </tr>
         </thead>
+        {% for les in lessen %}
+        <tr>
+            <td>{{ les.training.naam }}</td>
+            <td>{{ les.locatie }}</td>
+            <td>{{ les.user.naam }}</td>
+            <td>{{ les.tijd }}</td>
+            <td>{{ les.datum }}</td>
+            <td><a href="{{ path('lessenlijst') }}/{{ les.id }}"><i style="color: blue" class="fas fa-arrow-right"></i></a></td>
+        </tr>
+        {% endfor %}
     </table>
     </div>
 {% endblock %}
