--- a/app/Resources/views/Gebruiker/show.html.lessenlijst.twig
+++ b/app/Resources/views/Gebruiker/show.html.lessenlijst.twig
@@ -33,14 +33,26 @@
             <th>Aanmelden</th>
         </tr>
         </thead>
-        {% for les in lessen %}
+        {% for les in besLessen %}
         <tr>
             <td>{{ les.training.naam }}</td>
             <td>{{ les.locatie }}</td>
             <td>{{ les.user.naam }}</td>
             <td>{{ les.tijd }}</td>
             <td>{{ les.datum }}</td>
-            <td><a href="{{ path('lessenlijst') }}/{{ les.id }}"><i style="color: blue" class="fas fa-arrow-right"></i></a></td>
+            <td>
+                <a href="{{ path('lessenlijst') }}/{{ les.id }}"><i style="color: blue" class="fas fa-arrow-right"></i></a></td>
+        </tr>
+        {% endfor %}
+        {% for deelname in gesLessen %}
+        <tr>
+            <td>{{ deelname.les.training.naam }}</td>
+            <td>{{ deelname.les.locatie }}</td>
+            <td>{{ deelname.les.user.naam }}</td>
+            <td>{{ deelname.les.tijd }}</td>
+            <td>{{ deelname.les.datum }}</td>
+            <td>
+                <p style="color: red">INGESCHREVEN</p></td>
         </tr>
         {% endfor %}
     </table>
