--- a/app/Resources/views/base.html.navbar.twig
+++ b/app/Resources/views/base.html.navbar.twig
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="{{ path('login') }}">Log in</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('registreer') }}">registreer</a>
+                <a class="nav-link" href="{{ path('registreer') }}">Registreer</a>
             </li>
         </ul>
     </div>
