--- a/app/Resources/views/base.html.navbar.twig
+++ b/app/Resources/views/base.html.navbar.twig
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ path('registreer') }}">Registreer</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('registreer') }}">Registreer</a>
+            </li>
         </ul>
     </div>
 </nav>
