--- a/app/Resources/views/Instructeur/show.html.lesdetails.twig
+++ b/app/Resources/views/Instructeur/show.html.lesdetails.twig
@@ -1,7 +1,5 @@
-{% extends 'base.html.inside.twig' %}
+{% extends 'Instructeur/base.html.instructeur.twig' %}
 {%  block title %}{{ name }}{%  endblock %}
-    {% block active1 %}active
-    {%  endblock %}
 {% block dataTableScript %}
 <script>
     $(document).ready( function () {
@@ -21,5 +19,38 @@
 </script>
 {%  endblock %}
 {% block content %}
+    <div class="col-sm-8">
+        <h1 class="h1">Lesdetails</h1>
+        <div class="col-sm-12">
+            <a href="{{ path('lessenlijstInst') }}"><button class="btn-danger"><i class="fas fa-arrow-left"></i>Terug</button></a>
+            <a href="{{ path('lessenlijstInst') }}"><button class="btn-success"><i class="fas fa-edit"></i>Bewerk</button></a>
+        </div>
+        <div class="col-sm-6">
+            <h2 class="h2">Informatie</h2>
+            <table class="table table-hover">
+                <tbody>
+                <tr>
+                    <th class="col-sm-4">ID</th><td>{{ les.id }}</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-4">Soort</th><td>{{ les.training.naam }}</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-4">Tijd</th><td>{{ les.tijd }}</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-4">Datum</th><td>{{ les.datum }}</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-4">Locatie</th><td>{{ les.locatie }}</td>
+                </tr>
+                <tr>
+                    <th class="col-sm-4">PersonenMax</th><td>{{ les.personenmax }}</td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
 
 {% endblock %}
