--- a/app/Resources/views/Instructeur/show.html.lesdetails.twig
+++ b/app/Resources/views/Instructeur/show.html.lesdetails.twig
@@ -23,7 +23,7 @@
         <h1 class="h1">Lesdetails</h1>
         <div class="col-sm-12">
             <a href="{{ path('lessenlijstInst') }}"><button class="btn-danger"><i class="fas fa-arrow-left"></i>Terug</button></a>
-            <a href="{{ path('lessenlijstInst') }}"><button class="btn-success"><i class="fas fa-edit"></i>Bewerk</button></a>
+            <a href="{{ path('lesedit') }}/{{ les.id }}"><button class="btn-success"><i class="fas fa-edit"></i>Bewerk</button></a>
         </div>
         <div class="col-sm-6">
             <h2 class="h2">Informatie</h2>
